Integracion de sqlite y crud para tareas y puestos de trabajo

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   fluttertoast: ^8.2.12
   intl: ^0.20.2
   shared_preferences: ^2.5.3
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
