Actualizacion del sistema, habilitacion con sqlile y crud

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<!-- Add IMAGE -->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Pick an image from galley</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Pick image from Camera</string>
+
 </dict>
 </plist>
